[HTP-0][common] 깃 이그노어 파일 수정
 서브디렉터리 내부에 out 폴더 하위 파일이 git에 추가되지 않도록 변경

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 # Ignore Gradle project-specific cache directory
 .gradle
-
+common/*.log
+common/out
 # Ignore Gradle build output directory
 build
 ds
 # Java & Gradle
-/build/
-/.gradle/
-/out/
-/bin/
+**/build/
+**/.gradle/
+**/out/**
+**/bin/
 /!gradle/wrapper/gradle-wrapper.jar
 
 # IntelliJ IDEA
