--- a/common/src/main/resources/application.yaml
+++ b/common/src/main/resources/application.yaml
@@ -3,6 +3,19 @@ spring:
     name:
       common
 
+    security:
+      oauth2:
+        client:
+          registration:
+            kakao:
+              client-id : 7f518aac49d2a9e7eadcfabcabcb1803
+              redirect-uri : www.hipstour.com/login/oauth2/code/kakao //임시
+              authorization-grant-type: authorization_code
+              client-name: Kakao
+              scope:
+                  - profile_nickname
+                  - account_email
+
 
 ---
 spring:
