--- a/common/src/main/resources/application.yaml
+++ b/common/src/main/resources/application.yaml
@@ -1,21 +1,26 @@
 spring:
   application:
-    name:
-      common
+    name: common
 
-    security:
-      oauth2:
-        client:
-          registration:
-            kakao:
-              client-id : 7f518aac49d2a9e7eadcfabcabcb1803
-              redirect-uri : www.hipstour.com/login/oauth2/code/kakao //임시
-              authorization-grant-type: authorization_code
-              client-name: Kakao
-              scope:
-                  - profile_nickname
-                  - account_email
-
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: 7f518aac49d2a9e7eadcfabcabcb1803
+            redirect-uri: "{baseUrl}/login/oauth2/code/kakao"
+            authorization-grant-type: authorization_code
+            client-name: Kakao
+            provider: kakao
+            #scope:
+            #  - profile_nickname
+            #  - account_email
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 ---
 spring:
