#26 20-resource-controller이미지-저장-및-응답기능
 어플리케이션 실행문제, h2연결문제 등 수정

--- a/ImageUpload/src/main/resources/application.yml
+++ b/ImageUpload/src/main/resources/application.yml
@@ -7,8 +7,20 @@ spring:
     driver-class-name: org.h2.Driver
     username: abc123
     password:
-
+    hikari:
+      maximum-pool-size: 5
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console  # 브라우저에서 접속 가능
+
+  spring:
+    task:
+      scheduling:
+        pool:
+          size: 2
