--- a/sync/src/main/resources/application.yml
+++ b/sync/src/main/resources/application.yml
@@ -1,8 +1,12 @@
 tourapi:
   host: https://apis.data.go.kr/B551011/KorService1/areaBasedList1
   service-key: #${서비스 키}
-  mobiles-od: ETC
+  mobiles-os: ETC
   mobile-app: hipstour
   default-rows: 100
   default-page: 1
   type: json
+
+sync:
+  schedule:
+    place-cron: "0 0 1 * * *"
