[COMMON]&[SYNC] 다중 작업
 PlaceDto와 PlaceMapper 클래스를 [SYNC] -> [COMMON] 이동
 application.yml에 서비스 키 추가
 GeoPoint 1차개발에서의 사용여부 고려

--- a/sync/src/main/resources/application.yml
+++ b/sync/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 tourapi:
   host: https://apis.data.go.kr/B551011/KorService1/areaBasedList2
-  service-key: #${서비스 키}
+  service-key: tYu2ASMUNpTRGpR6%2BM3QuT8REPkbiUJCUM4zFhFFCDDLMETQY5n8K0B%2F31XV%2FblCnhmRp5fSlntXLrRsR%2F6jfw%3D%3D
   mobiles-os: ETC
   mobile-app: hipstour
   default-rows: 100
