--- a/sync/src/main/resources/application.yml
+++ b/sync/src/main/resources/application.yml
@@ -10,7 +10,8 @@ tourapi:
 sync:
   schedule:
     cron: "0 0 1 * * *"
-
+  load:
+    area-codes: 1,2,3,4,5,6,7,8,31,32,33,34,35,36,37,38,39
 
 spring:
   jpa:
