--- a/common/src/main/resources/application.yaml
+++ b/common/src/main/resources/application.yaml
@@ -4,9 +4,24 @@ jwt:
   refresh-validity-ms: 604800000
   #604800000
 
+oauth2:
+  kakao:
+    client-id: 59136a0497ad9e53666ed8a5fd7caf11
+    redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
+    authorization-grant-type: authorization_code
+    client-name: Kakao
+    provider: kakao
+    scope:
+      - profile_nickname
+    authorization-uri: https://kauth.kakao.com/oauth/authorize
+    token-uri: https://kauth.kakao.com/oauth/token
+    user-info-uri: https://kapi.kakao.com/v2/user/me
+    user-name-attribute: id
+    resource-url: https://kauth.kakao.com/oauth/token
 
 logging:
   level:
+     root: debug
      org.hibernate.tool.schema: debug
      org.hibernate.SQL: debug
      org.hibernate.orm.boot: debug
@@ -17,27 +32,6 @@ logging:
 spring:
   application:
     name: common
-
-  security:
-    oauth2:
-      client:
-        registration:
-          kakao:
-            client-id: 59136a0497ad9e53666ed8a5fd7caf11
-            redirect-uri: "http://localhost:8080/login/oauth2/code/kakao"
-            authorization-grant-type: authorization_code
-            client-name: Kakao
-            provider: kakao
-            scope:
-              - profile_nickname
-
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-
 
 
 #  datasource:
