[ImageUpload] 저장경로 수정  local, dev 환경에 따라 설정할수있게 변경

--- a/ImageUpload/src/main/resources/application.yml
+++ b/ImageUpload/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: local  # 기본은 local로 실행
+    active: dev  # 기본은 local로 실행
 
   datasource:
     url: jdbc:h2:mem:testdb
