--- a/common/src/main/resources/application.yaml
+++ b/common/src/main/resources/application.yaml
@@ -89,7 +89,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: jdbc:mariadb://localhost:3306/mydb
+    url: jdbc:mariadb://localhost:3306/hipstour
     driver-class-name: org.mariadb.jdbc.Driver
     username: root
     password: whgusdlf1!
